force-app/main/default/objects/Negoptim__Orga_Taxes__c/fields/Negoptim__Code_Partner1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Code_Partner1__c</fullName>
    <label>Code Partner1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>