force-app/main/default/objects/Negoptim__Orga_Taxes__c/fields/Negoptim__Definition__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Definition__c</fullName>
    <label>Definition</label>
    <type>TextArea</type>
</CustomField>