force-app/main/default/objects/Negoptim__Orga_Taxes__c/fields/Negoptim__Ext_id__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ext_id__c</fullName>
    <externalId>true</externalId>
    <label>Ext id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>