force-app/main/default/objects/Negoptim__Orga_Taxes__c/fields/Negoptim__GTIN__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__GTIN__c</fullName>
    <label>GTIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>