force-app/main/default/objects/Negoptim__Orga_Taxes__c/fields/Negoptim__Status__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>