force-app/main/default/objects/Negoptim__Orga_Taxes__c/fields/Negoptim__Status_BDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status_BDate__c</fullName>
    <label>Status Begin Date</label>
    <type>Date</type>
</CustomField>