force-app/main/default/objects/Negoptim__Orga_Taxes__c/fields/Negoptim__Tax_Agency__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Tax_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Agency</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Tax_Agency__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Negoptim__Orga_BU__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tax Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Negoptim__Orga_BU__c</referenceTo>
    <relationshipLabel>Orga Taxes (Tax Agency)</relationshipLabel>
    <relationshipName>Orga_Taxes2</relationshipName>
    <type>Lookup</type>
</CustomField>