force-app/main/default/objects/Negoptim__Orga_Taxes__c/fields/Negoptim__Tax_amount__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Tax_amount__c</fullName>
    <label>Valeur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>