force-app/main/default/objects/Negoptim__Orga_Taxes__c/fields/Negoptim__Tax_Name__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Tax_Name__c</fullName>
    <label>Tax Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>