force-app/main/default/objects/Negoptim__Orga_Taxes__c/listViews/Negoptim__ALL.listView-meta.xml
<ListView>
    <fullName>Negoptim__ALL</fullName>
    <columns>NAME</columns>
    <columns>Negoptim__Status__c</columns>
    <columns>Negoptim__Tax_amount__c</columns>
    <columns>Negoptim__Ranking__c</columns>
    <filterScope>Mine</filterScope>
    <label>ALL</label>
</ListView>